--- a/Pages/index.html
+++ b/Pages/index.html
@@ -54,14 +54,16 @@
 
            <img class="w-50 float-left" src="../Resources/assets/images/Fig1.png" alt="fig1">
 
-           <p class="text-justify" >For this project, a Python script was created to visualize the weather of over 500 cities across the
-              world
-              of varying distance from the equator. MatPlotlib, A Python library, and the OpenWeatherMap API were used
-              to
-              create a representative model of weather across world cities.
+           <p class="text-justify" >The purpose of this project was to analayze how weather changes as you get closer to the equator. 
+               To accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities.
+            
               <br>
               <br>
-              The first requirement was to create a series of scatter plots to showcase the following relationships:
+
+              After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs. latitude. Factors we looked at 
+              included: cloudiness, wind speed, temperature and humidity. This site provides the source data and visualizations created
+              as part of the analysis, as well as explainations and descriptions of any trends and correlations. 
+            
            </p>
            <ul class="page-list">
               <li><a href="/temperature.html">Temperature vs. Latitude</a></li>
