--- a/Pages/index.html
+++ b/Pages/index.html
@@ -56,10 +56,8 @@
 
            <p class="text-justify" >The purpose of this project was to analayze how weather changes as you get closer to the equator. 
                To accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities.
-            
               <br>
               <br>
-
               After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs. latitude. Factors we looked at 
               included: cloudiness, wind speed, temperature and humidity. This site provides the source data and visualizations created
               as part of the analysis, as well as explainations and descriptions of any trends and correlations. 
@@ -99,7 +97,7 @@
   </main>
 
   <footer id="footer" class="footer footer-expand-md text-center">
-     <p>Data Analytics 2020</p>
+     <p>City Latitude Dashboard by Brittany Whitaker</p>
   </footer>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
