--- a/Pages/index.html
+++ b/Pages/index.html
@@ -15,36 +15,45 @@
 </head>  
 
 <body>
-    <nav> id="nav" class="navbar navbar-expand-md">
-    <a class="navbar-brand mr-0 mr-md-2" href="/html/landing.html"><b>Latitude Dashboard</b></a>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-
-        <ul class="navbar-nav flex-row ml-md-auto">
-           <li class="nav-item dropdown">
-              <button class="btn dropdown-toggle mr-md-2" type="button" id="dropdownMenuButton" data-toggle="dropdown"
-                 aria-haspopup="true" aria-expanded="false">Plots
-              </button>
-
-              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                 <a class="dropdown-item" href="/html/cloudiness.html">Cloudiness</a>
-                 <a class="dropdown-item" href="/html/humidity.html">Humidity</a>
-                 <a class="dropdown-item" href="/html/temperature.html">Max Temperature</a>
-                 <a class="dropdown-item" href="/html/wind.html">Wind Speed</a>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      
+        <div class="collapse navbar-collapse" id="navbarColor01">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Home
+                <span class="sr-only">(current)</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Features</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Pricing</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="#">Action</a>
+                <a class="dropdown-item" href="#">Another action</a>
+                <a class="dropdown-item" href="#">Something else here</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#">Separated link</a>
               </div>
-           </li>
-
-           <li class="nav-item active">
-              <a class="nav-link p-2" href="/html/comparisons.html">Comparisons</a>
-           </li>
-
-           <li class="nav-item active">
-              <a class="nav-link p-2" href="/html/data.html">Data</a>
-           </li>
-        </ul>
-
-     </div>
-
-  </nav>
+            </li>
+          </ul>
+          <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="text" placeholder="Search">
+            <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+          </form>
+        </div>
+      </nav>
 
   <main class="container mt-4">
      <div class="row ">
