--- a/Pages/index.html
+++ b/Pages/index.html
@@ -15,13 +15,13 @@
 </head>  
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
       
-        <div class="collapse navbar-collapse" id="navbarColor01">
+        <div class="collapse navbar-collapse" id="navbarColor03">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
               <a class="nav-link" href="#">Home
@@ -106,7 +106,7 @@
   </main>
 
   <footer id="footer" class="footer footer-expand-md text-center">
-     <p>City Latitude Dashboard by Brittany Whitaker</p>
+     <p>Dashboard by Brittany Whitaker</p>
   </footer>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
