--- a/Pages/index.html
+++ b/Pages/index.html
@@ -27,17 +27,13 @@
               </div>
             </li>
           </ul>
-          <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="text" placeholder="Search">
-            <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-          </form>
         </div>
       </nav>
 
   <main class="container mt-4">
      <div class="row ">
         <div id="text" class="box col-md-7 mr-4">
-           <h2><strong>Latitude vs. X Summary</strong></h2>
+           <h2><strong>Latitude vs. X </strong></h2>
            <hr>
 
            <img class="w-50 float-left" src="../Resources/assets/images/Fig1.png" alt="fig1">
