--- a/Pages/index.html
+++ b/Pages/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="navigation">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" style="background-color: white;" href="index.html">Latitude Dashboard</a>
+            <a class="navbar-brand" style="background-color:whitesmoke;" href="index.html">Latitude Dashboard</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -23,7 +23,7 @@
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Plots
+                            Latitude vs.
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                             <a class="dropdown-item" href="temperature.html">Max Temperature</a>
@@ -33,7 +33,7 @@
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="comparisons.html">Comparison</a>
+                        <a class="nav-link" href="comparisons.html">Comparisons</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="data.html">Data</a>
