--- a/Pages/index.html
+++ b/Pages/index.html
@@ -45,19 +45,19 @@
 
   <main class="container mt-4">
      <div class="row ">
-        <div id="text" class="box col-md-7 mr-4">
+        <div id="text" class="box col-md-7 mr-4" style="padding-bottom: 20px;"> 
            <h2><strong>Latitude vs. X </strong></h2>
+
            <hr>
 
-           <img class="w-50 float-left" src="../Resources/assets/images/Fig1.png" alt="fig1">
+           <img class="w-50 float-left" src="../Resources/assets/images/Fig1.png" alt="lat vs temperature fig">
 
-           <p class="text-justify" >The purpose of this project was to analayze how weather changes as you get closer to the equator. 
-               To accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities.
-              <br>
-              <br>
-              After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs. latitude. Factors we looked at 
+            <p> The purpose of this project was to analayze how weather changes as you get closer to the equator. 
+                To accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities. </p>
+              
+            <p> After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs. latitude. Factors we looked at 
               included: cloudiness, wind speed, temperature and humidity. This site provides the source data and visualizations created
-              as part of the analysis, as well as explainations and descriptions of any trends and correlations. 
+              as part of the analysis, as well as explainations and descriptions of any trends and correlations. </p>
             
            </p>
            <ul class="page-list">
