--- a/Pages/index.html
+++ b/Pages/index.html
@@ -22,7 +22,7 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" style="color: cornflowerblue;" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Latitude vs.
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -33,10 +33,10 @@
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="comparisons.html">Comparisons</a>
+                        <a class="nav-link" style="color: cornflowerblue;" href="comparisons.html">Comparisons</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="data.html">Data</a>
+                        <a class="nav-link" style="color: cornflowerblue;" href="data.html">Data</a>
                     </li>
                 </ul>
             </div>
