--- a/Pages/index.html
+++ b/Pages/index.html
@@ -15,14 +15,14 @@
 <body>
     <div class="navigation">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" style="background-color: cornflowerblue;" href="index.html">Latitude Dashboard</a>
+            <a class="navbar-brand" style="color:whitesmoke;" style="background-color:cornflowerblue;" href="index.html">Latitude Dashboard</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle"  href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" style="color: cornflowerblue;" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Latitude vs.
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -33,10 +33,10 @@
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="comparisons.html">Comparisons</a>
+                        <a class="nav-link" style="color: cornflowerblue;" href="comparisons.html">Comparisons</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="data.html">Data</a>
+                        <a class="nav-link" style="color: cornflowerblue;" href="data.html">Data</a>
                     </li>
                 </ul>
             </div>
