--- a/Pages/index.html
+++ b/Pages/index.html
@@ -42,51 +42,40 @@
             </div>
         </nav>
     </div>
-
-  <main class="container mt-4">
-     <div class="row ">
-        <div id="text" class="box col-md-7 mr-4" style="padding-bottom: 20px;"> 
-           <h2><strong>Latitude vs. X </strong></h2>
-
-           <hr>
-
-           <img class="w-50 float-left" src="../Resources/assets/images/Fig1.png" alt="lat vs temperature fig">
-
-            <p> The purpose of this project was to analayze how weather changes as you get closer to the equator. 
-                To accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities. </p>
-              
-            <p> After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs. latitude. Factors we looked at 
-              included: cloudiness, wind speed, temperature and humidity. This site provides the source data and visualizations created
-              as part of the analysis, as well as explainations and descriptions of any trends and correlations. </p>
-            
-           </p>
-           <ul class="page-list">
-              <li><a href="/temperature.html">Temperature vs. Latitude</a></li>
-              <li><a href="/humidity.html">Humidity vs. Latitude</a></li>
-              <li><a href="/cloudiness.html">Cloudiness vs. Latitude</a></li>
-              <li><a href="/wind.html">Wind Speed vs. Latitude</a></li>
-           </ul>
-        </div>
-
-        <div id="images" class="box col-md-4 ml-4">
+<!-- dashboard -->
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-7 col-md-12">
+                <!-- left side -->
+                <div class="box" style="padding-bottom: 20px;">
+                    <h3 class="title">Latitude vs. X</h3>
+                    <hr>
+                    <img src="Resources/Assets/Images/City_Latitude_vs_Max_Temperature.png" class="vizualization rounded float-left" alt="Max Temperature Graph">
+                    <p>The purpose of this project was to analyze how weather changes as you get closer to the equator. 
+                    To accomplish this analysis, wefirst pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities.</p>
+                    <p>After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs. latitude. 
+                    Factors we looked at included: temperature, cloudiness, wind speed, and humidity. This site provides the source data and
+                    visualizations created as part of the analysis, as well as explanations and descriptions of any trends and correlations witnessed.</p>
+                </div>
+            </div>
+            <div class="col-lg-5 col-md-12">
 
            <h2><strong>Visualizations</strong></h2>
            <hr>
-
-           <div class="row">
+           <div class="row" style="padding-bottom: 30px;">
               <div class="col-md-6">
                  <a href="cloudiness.html" target="_blank"><img class="img-thumbnail"
                        src="../Resources/assets/images/Fig3.png" alt="Cloudiness visualization"></a>
                  <a href="humidity.html" target="_blank"><img class="img-thumbnail"
-                       src="../Resources/assets/images/Fig2.png" alt="Humidity visualization"></a>
+                       src="../Resources/assets/images/Fig2.png" alt="Humidity visualization">
+                    </a>
               </div>
-
               <div class="col-md-6">
                  <a href="temperature.html" target="_blank"><img class="img-thumbnail"
                        src="../Resources/assets/images/Fig1.png" alt="Max Temperature visualization"></a>
                  <a href="wind.html" target="_blank"><img class="img-thumbnail"
-                       src="../Resources/assets/images/Fig4.png" alt="Wind Speed visualization"></a>
-
+                       src="../Resources/assets/images/Fig4.png" alt="Wind Speed visualization">
+                    </a>
               </div>
            </div>
         </div>
