--- a/Pages/index.html
+++ b/Pages/index.html
@@ -50,7 +50,7 @@
                 <div class="box" style="padding-bottom: 20px;">
                     <h3 class="title">Latitude vs. X</h3>
                     <hr>
-                    <img src="Resources/Assets/Images/City_Latitude_vs_Max_Temperature.png" class="vizualization rounded float-left" alt="Max Temperature Graph">
+                    <img src="../Resources/assets/images/Fig1.png" class="vizualization rounded float-left" alt="lat vs. temperature">
                     <p>The purpose of this project was to analyze how weather changes as you get closer to the equator. 
                     To accomplish this analysis, wefirst pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities.</p>
                     <p>After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs. latitude. 
