--- a/Pages/index.html
+++ b/Pages/index.html
@@ -60,26 +60,40 @@
             </div>
             <div class="col-lg-5 col-md-12">
 
-           <h2><strong>Visualizations</strong></h2>
-           <hr>
-           <div class="row" style="padding-bottom: 30px;">
-              <div class="col-md-6">
-                 <a href="cloudiness.html" target="_blank"><img class="img-thumbnail"
-                       src="../Resources/assets/images/Fig3.png" alt="Cloudiness visualization"></a>
-                 <a href="humidity.html" target="_blank"><img class="img-thumbnail"
-                       src="../Resources/assets/images/Fig2.png" alt="Humidity visualization">
-                    </a>
-              </div>
-              <div class="col-md-6">
-                 <a href="temperature.html" target="_blank"><img class="img-thumbnail"
-                       src="../Resources/assets/images/Fig1.png" alt="Max Temperature visualization"></a>
-                 <a href="wind.html" target="_blank"><img class="img-thumbnail"
-                       src="../Resources/assets/images/Fig4.png" alt="Wind Speed visualization">
-                    </a>
-              </div>
-           </div>
+                <!-- right side -->
+                <div class="box">
+                    <h3 class="title">Visualizations</h3>
+                    <hr>
+                    <div class="container">
+                        <div class="row" style="padding-bottom: 30px;">
+                            <div class="col-6">
+                                <a href="temperature.html">
+                                <img class="panel" src="../Resources/assets/images/Fig1.png" alt="Max Temperature visualization">
+                                </a>
+                            </div>
+                            <div class="col-6">
+                                <a href="humidity.html">
+                                <img class="panel" src="../Resources/assets/images/Fig2.png" alt="Humidity visualization">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="row" style="padding-bottom: 30px;">
+                            <div class="col-6">
+                                <a href="cloudiness.html">
+                                <img class="panel" src="../Resources/assets/images/Fig3.png" alt="Cloudiness visualization">
+                                </a>
+                            </div>
+                            <div class="col-6">
+                                <a href="wind.html">
+                                    <img class="panel" src="../Resources/assets/images/Fig4.png" alt="Wind Speed visualization">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-     </div>
+    </div>
   </main>
 
   <footer id="footer" class="footer footer-expand-md text-center">
