--- a/Pages/index.html
+++ b/Pages/index.html
@@ -44,42 +44,39 @@
     </div>
 
 <!-- dashboard -->
-    <div class = "container">
-        <div class="row">
-            <div class="col-md-8">
-                <div class="panel panel-default">
-                    <div class="panel-body">
-
-                    <h2>Latitude vs X</h2>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-sm-12">
+                    <h1>Summary: Latitude vs. X</h1>
                     <hr>
-                    <img class="first image" src="../Resources/assets/images/Fig1.png" alt="Max Temperature visualization">
-                    <p class = "text">This is an analysis and visualization of weather of 500+ cities across the world. The main objective of the analysis was to see the correlation between factors like temperature, humidity, cloudiness , wind speed and Latitude. <br> 
-                A weather check was performed on each  of the unique cities using a series of successive API calls from OpenWeatherMap. Then all the different point of interests were plotted against latitude using Matplotlib.
-                <br> 
-                The analysis shows that an equatorial climate is depicted by higher temperature and humidity. There is no conclusive correlation between wind speed and the distance from the equator.The clouds seem to be concentrated equally near the equator and the tropics.However, the higher humidity near the equator gives an indication of the possiblity of the clouds being the of the type "cumulonimbus".</p>
-                    <br>        
-                    </div>
+                    <br>
+                    <img src="lat_vs_maxtemp.png" alt="maxtemp" height="200" width="200" align = "left">
+                    <p>The purpose of this project was to analyze how weather changes as you get closer to the equator.  To accomplish this analysis,
+                    we first pulled data from the OpenWeatherMap API to assemble a dataset of over 500 cities.
+                    </p>
+                    <p>After assembling the dataset, we used MatplotLib to plot various aspects of the weather vs latitude.  Factors we looked at included:
+                    temperature, cloudiness, humidity, and wind speed.  This site provides the source data and visualizations created as part of the 
+                    analysis, as well as explanations and descriptions of any trends and correlations witnessed.
+                    </p>
+                </div>
+                <div class="col-md-4 col-sm-12">
+                    <h2>Visualizations</h2>
+                    <hr>
+                        <div class= "col-md-6 col-sm-3">
+                            <img id ="pic1" src="../Resources/assets/images/Fig1.png" alt="temp" height="150" width="150"> 
+                        </div> 
+                        <div class= "col-md-6 col-sm-3">
+                            <img id ="pic2" src="../Resources/assets/images/Fig2.png" alt="humidity" height="150" width="150">
+                        </div> 
+                        <div class= "col-md-6 col-sm-3">
+                            <img id = "pic3" src="../Resources/assets/images/Fig3.png" alt="cloudiness" height="150" width="150">
+                        </div> 
+                        <div class= "col-md-6 col-sm-3">
+                            <img id = "pic4" src="../Resources/assets/images/Fig4.png" alt="wind" height="150" width="150">
+                        </div> 
                 </div>
             </div>
-            <div class="col-md-4">
-                <div class="panel panel-default">
-                        <div class="panel-body">                                    
-                            <h2>Visualizations</h2>
-                            <hr>
-
-                            <div class="row" >
-                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"><a href="temperature.html"><img class = "img img-responsive" src="../Resources/assets/images/Fig1.png" style="width:100%" alt="temp visual"></a></div>
-                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"><a href="humidity.html"><img class = "img img-responsive" src="../Resources/assets/images/Fig2.png" style="width:100%" alt="humidity visual"></a></div>
-                            </div>
-                            <div class="row">
-                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"><a href="cloudiness.html"><img class = "img img-responsive" src="../Resources/assets/images/Fig3.png" style="width:100%" alt="cloudiness visual"></a></div>
-                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"><a href="wind.html"><img class = "img img-responsive" src="../Resources/assets/images/Fig4.png" style="width:100%" alt="wind visual"></a></div>
-                            </div>
-                                
-                        </div>
-                </div>     
-            </div>    
-    </div>
+        </div>
 
   </main>
 
