--- a/Pages/index.html
+++ b/Pages/index.html
@@ -50,7 +50,7 @@
                     <h1>Summary: Latitude vs. X</h1>
                     <hr>
                     <br>
-                    <img src="lat_vs_maxtemp.png" alt="maxtemp" height="200" width="200" align = "left">
+                    <img src="../Resources/assets/images/Fig1.png" alt="temp" height="200" width="200" align = "left">
                     <p>The purpose of this project was to analyze how weather changes as you get closer to the equator.  To accomplish this analysis,
                     we first pulled data from the OpenWeatherMap API to assemble a dataset of over 500 cities.
                     </p>
@@ -63,16 +63,16 @@
                     <h2>Visualizations</h2>
                     <hr>
                         <div class= "col-md-6 col-sm-3">
-                            <img id ="pic1" src="../Resources/assets/images/Fig1.png" alt="temp" height="150" width="150"> 
+                            <img id ="1" src="../Resources/assets/images/Fig1.png" alt="temp" height="150" width="150"> 
                         </div> 
                         <div class= "col-md-6 col-sm-3">
-                            <img id ="pic2" src="../Resources/assets/images/Fig2.png" alt="humidity" height="150" width="150">
+                            <img id ="2" src="../Resources/assets/images/Fig2.png" alt="humidity" height="150" width="150">
                         </div> 
                         <div class= "col-md-6 col-sm-3">
-                            <img id = "pic3" src="../Resources/assets/images/Fig3.png" alt="cloudiness" height="150" width="150">
+                            <img id = "3" src="../Resources/assets/images/Fig3.png" alt="cloudiness" height="150" width="150">
                         </div> 
                         <div class= "col-md-6 col-sm-3">
-                            <img id = "pic4" src="../Resources/assets/images/Fig4.png" alt="wind" height="150" width="150">
+                            <img id = "4" src="../Resources/assets/images/Fig4.png" alt="wind" height="150" width="150">
                         </div> 
                 </div>
             </div>
