--- a/Pages/index.html
+++ b/Pages/index.html
@@ -44,44 +44,59 @@
     </div>
 
 <!-- dashboard -->
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 col-sm-12">
-                    <h1>Summary: Latitude vs. X</h1>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-7 col-md-12">
+                <!-- left -->
+                <div class="box" style="padding-bottom: 20px;">
+                    <h3 class="title">Latitude vs. X</h3>
                     <hr>
-                    <br>
-                    <img src="../Resources/assets/images/Fig1.png" alt="temp" height="200" width="200" align = "left">
-                    <p>The purpose of this project was to analyze how weather changes as you get closer to the equator.  To accomplish this analysis,
-                    we first pulled data from the OpenWeatherMap API to assemble a dataset of over 500 cities.
-                    </p>
-                    <p>After assembling the dataset, we used MatplotLib to plot various aspects of the weather vs latitude.  Factors we looked at included:
-                    temperature, cloudiness, humidity, and wind speed.  This site provides the source data and visualizations created as part of the 
-                    analysis, as well as explanations and descriptions of any trends and correlations witnessed.
-                    </p>
+                    <img src="../Resources/assets/images/Fig1.png"   class="vizualization rounded float-left" alt="temp">
+                    <p>The purpose of this project was to analyze how weather changes as you get closer to the equator. 
+                    To accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities.</p>
+                    <p>After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs. latitude. 
+                    Factors we looked at included: temperature, cloudiness, wind speed, and humidity. This site provides the source data and
+                    visualizations created as part of the analysis, as well as explanations and descriptions of any trends and correlations witnessed.</p>
                 </div>
-                <div class="col-md-4 col-sm-12">
-                    <h2>Visualizations</h2>
+            </div>
+            <div class="col-lg-5 col-md-12">
+                <!-- right -->
+                <div class="box">
+                    <h3 class="title">Visualizations</h3>
                     <hr>
-                        <div class= "col-md-6 col-sm-3">
-                            <img id ="1" src="../Resources/assets/images/Fig1.png" alt="temp" height="150" width="150"> 
-                        </div> 
-                        <div class= "col-md-6 col-sm-3">
-                            <img id ="2" src="../Resources/assets/images/Fig2.png" alt="humidity" height="150" width="150">
-                        </div> 
-                        <div class= "col-md-6 col-sm-3">
-                            <img id = "3" src="../Resources/assets/images/Fig3.png" alt="cloudiness" height="150" width="150">
-                        </div> 
-                        <div class= "col-md-6 col-sm-3">
-                            <img id = "4" src="../Resources/assets/images/Fig4.png" alt="wind" height="150" width="150">
-                        </div> 
+                    <div class="container">
+                        <div class="row" style="padding-bottom: 30px;">
+                            <div class="col-6">
+                                <a href="temperature.html">
+                                <img class="panel" src="../Resources/assets/images/Fig1.png" alt="temp">
+                                </a>
+                            </div>
+                            <div class="col-6">
+                                <a href="humidity.html">
+                                <img class="panel" src="../Resources/assets/images/Fig2.png" alt="humidity">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="row" style="padding-bottom: 30px;">
+                            <div class="col-6">
+                                <a href="cloudiness.html">
+                                <img class="panel" src="../Resources/assets/images/Fig3.png" alt="cloudiness">
+                                </a>
+                            </div>
+                            <div class="col-6">
+                                <a href="wind.html">
+                                    <img class="panel" src="../Resources/assets/images/Fig4.png" alt="wind">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-
-  </main>
+    </div>
 
   <footer id="footer" class="footer footer-expand-md text-center">
-     <p>Dashboard by Brittany Whitaker</p>
+     <p> © Brittany Whitaker</p>
   </footer>
 
     <!-- Optional JavaScript -->
