--- a/Pages/index.html
+++ b/Pages/index.html
@@ -48,7 +48,7 @@
         <div class="row">
             <div class="col-lg-5 col-md-12">
                 <!-- left -->
-                <div class="box" style="padding-bottom: 50px;">
+                <div class="box" style="padding-bottom: 40px;">
                     <h3 class="title">Latitude vs. X</h3>
                     <hr>
                     <img src="../Resources/assets/images/Fig1.png"   class="vizualization rounded float-left" alt="temp">
@@ -65,7 +65,7 @@
                     <h3 class="title">Visualizations</h3>
                     <hr>
                     <div class="container">
-                        <div class="row">
+                        <div class="row" style="padding-bottom: 150px;">
                             <div class="col-6">
                                 <a href="temperature.html">
                                 <img class="panel" src="../Resources/assets/images/Fig1.png" alt="temp">
@@ -77,7 +77,7 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="row" >
+                        <div class="row" style="padding-bottom: 40px;">
                             <div class="col-6">
                                 <a href="cloudiness.html">
                                 <img class="panel" src="../Resources/assets/images/Fig3.png" alt="cloudiness">
