--- a/Pages/index.html
+++ b/Pages/index.html
@@ -46,7 +46,7 @@
 <!-- dashboard -->
     <div class="container">
         <div class="row">
-            <div class="col-6">
+            <div class="col-6 col-md-4">
                 <!-- left -->
                 <div class="box" style="padding-bottom: 30px;">
                     <h3 class="title">Latitude vs. X</h3>
@@ -59,7 +59,7 @@
                     visualizations created as part of the analysis, as well as explanations and descriptions of any trends and correlations witnessed.</p>
                 </div>
             </div>
-            <div class="col-6">
+            <div class="col-6 col-md-4">
                 <!-- right -->
                 <div class="box">
                     <h3 class="title">Visualizations</h3>
