--- a/Pages/temperature.html
+++ b/Pages/temperature.html
@@ -48,7 +48,7 @@
             <div class="col-lg-7 col-md-12">
                 <!-- left -->
                 <div class="box" style="padding-bottom: 30px;">
-                    <h3 class="title">Latitude vs. Max Temperatureh3>
+                    <h3 class="title">Latitude vs. Max Temperature </h3>
                     <hr>
                     <img src="../Resources/assets/images/Fig1.png"   class="vizualization rounded float-left" alt="temp">
                     <p>As expected, the weather becomes significantly warmer as one approaches the equator (0 Deg. Latitude). 
