--- a/Pages/humidity.html
+++ b/Pages/humidity.html
@@ -51,8 +51,7 @@
                     <h3 class="title">Latitude vs. Humidity </h3>
                     <hr>
                     <img src="../Resources/assets/images/Fig2.png"   class="vizualization rounded float-left" alt="humidity">
-                    <p>There seems to be little to no correlation between humidity and Latitude. However, a small grouping of cities exhibited abnormally low humity levels 
-                        (at 0% humidity) in the Northern Hemisphere at around 60° to 75° Latitude.</p>
+                    <p>There seems to be little to no correlation between humidity and Latitude.</p>
                 </div>
             </div>
             <div class="col-lg-5 col-md-12">
