--- a/Pages/comparisons.html
+++ b/Pages/comparisons.html
@@ -43,7 +43,47 @@
             </div>
         </nav>
     </div>
-    
+
+    <div class="container">
+        <div class="row">
+            <!--content-->
+            <div class="box">
+                <h3 class="title">Comparison: Latitude vs. X</h3>
+                <hr>
+                <p><strong>Click</strong> on any plot to get an in-depth analysis</p>
+                <div class="container" style="padding-bottom: 10px;">
+                    <div class="row">
+                        <div class="col-lg-6" style="padding-bottom: 30px;">
+                            <div class="title">vs. Max Temperature</div>
+                            <a href="temperature.html">
+                                <img class="panel" src="../Resources/assets/images/Fig1.png" alt="max temp">
+                            </a>
+                        </div>
+                        <div class="col-lg-6" style="padding-bottom: 30px;">
+                            <div class="title">vs. Humidity</div>
+                            <a href="humidity.html">
+                                <img class="panel" src="../Resources/assets/images/Fig2.png" alt="humidity">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-6" style="padding-bottom: 30px;">
+                            <div class="title">vs. Cloudiness</div>
+                            <a href="cloudiness.html">
+                                <img class="panel" src="../Resources/assets/images/Fig3.png" alt="cloudiness">
+                            </a>
+                        </div>
+                        <div class="col-lg-6" style="padding-bottom: 30px;">
+                            <div class="title">vs. Wind Speed</div>
+                            <a href="wind.html">
+                                <img class="panel" src="../Resources/assets/images/Fig4.png" alt="wind speed">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 
