--- a/Pages/data.html
+++ b/Pages/data.html
@@ -49,17 +49,17 @@
             <hr>
             <p>The following table includes all of the data used for plotting during this project.</p>
             <br>
-            <div class="table-responsive" style="overflow-x:auto; overflow-y:auto; max-height:470px; max-width: auto;">
+            <div class="table-responsive" style=" color:cornflowerblue; overflow-x:auto; overflow-y:auto; max-height:470px; max-width: auto;">
                 <table class="table table-striped table-dark table table-hover table-condensed">
                     <!-- csv -->
-                    <thead><tr><th title="Field #1">City_ID</th>
+                    <thead><tr><th title="Field #1">CityID</th>
                     <th title="Field #2">City</th>
                     <th title="Field #3">Cloudiness</th>
                     <th title="Field #4">Country</th>
                     <th title="Field #5">Date</th>
                     <th title="Field #6">Humidity</th>
-                    <th title="Field #7">Lat</th>
-                    <th title="Field #8">Lng</th>
+                    <th title="Field #7">Latitude</th>
+                    <th title="Field #8">Longitude</th>
                     <th title="Field #9">Max Temp</th>
                     <th title="Field #10">Wind Speed</th>
                     </tr></thead>
