--- a/temperature.html
+++ b/temperature.html
@@ -50,7 +50,7 @@
                 <div class="box" style="padding-bottom: 30px;">
                     <h3 class="title">Latitude vs. Max Temperature </h3>
                     <hr>
-                    <img src="../Resources/assets/images/Fig1.png"   class="vizualization rounded float-left" alt="temp">
+                    <img src="/Resources/assets/images/Fig1.png"   class="vizualization rounded float-left" alt="temp">
                     <p>As expected, the weather becomes significantly warmer as one approaches the equator (0 Deg. Latitude). 
                         More interestingly, however, is the fact that the southern hemisphere tends to be warmer this time of the year than the northern hemisphere. 
                         This may be due to the tilt of the earth at the time of the year this data was gathered.</p>
@@ -65,24 +65,24 @@
                         <div class="row" style="padding-bottom: 30px;">
                             <div class="col-6">
                                 <a href="temperature.html">
-                                <img class="panel" src="../Resources/assets/images/Fig1.png" alt="temp">
+                                <img class="panel" src="/Resources/assets/images/Fig1.png" alt="temp">
                                 </a>
                             </div>
                             <div class="col-6">
                                 <a href="humidity.html">
-                                <img class="panel" src="../Resources/assets/images/Fig2.png" width="500" height="420" alt="humidity">
+                                <img class="panel" src="/Resources/assets/images/Fig2.png" width="500" height="420" alt="humidity">
                                 </a>
                             </div>
                         </div>
                         <div class="row" style="padding-bottom: 30px;">
                             <div class="col-6">
                                 <a href="cloudiness.html">
-                                <img class="panel" src="../Resources/assets/images/Fig3.png" alt="cloudiness">
+                                <img class="panel" src="/Resources/assets/images/Fig3.png" alt="cloudiness">
                                 </a>
                             </div>
                             <div class="col-6">
                                 <a href="wind.html">
-                                    <img class="panel" src="../Resources/assets/images/Fig4.png" alt="wind">
+                                    <img class="panel" src="/Resources/assets/images/Fig4.png" alt="wind">
                                 </a>
                             </div>
                         </div>
