--- a/wind.html
+++ b/wind.html
@@ -50,7 +50,7 @@
                 <div class="box" style="padding-bottom: 30px;">
                     <h3 class="title">Latitude vs. Wind Speed </h3>
                     <hr>
-                    <img src="../Resources/assets/images/Fig4.png"   class="vizualization rounded float-left" alt="wind">
+                    <img src="/Resources/assets/images/Fig4.png"   class="vizualization rounded float-left" alt="wind">
                     <p> There is no significant coorelation between latitude and wind speed, although there are some higher wind speeds over 60 Deg. Latitude. </p>
                 </div>
             </div>
@@ -63,24 +63,24 @@
                         <div class="row" style="padding-bottom: 30px;">
                             <div class="col-6">
                                 <a href="temperature.html">
-                                <img class="panel" src="../Resources/assets/images/Fig1.png" alt="temp">
+                                <img class="panel" src="/Resources/assets/images/Fig1.png" alt="temp">
                                 </a>
                             </div>
                             <div class="col-6">
                                 <a href="humidity.html">
-                                <img class="panel" src="../Resources/assets/images/Fig2.png" width="500" height="420" alt="humidity">
+                                <img class="panel" src="/Resources/assets/images/Fig2.png" width="500" height="420" alt="humidity">
                                 </a>
                             </div>
                         </div>
                         <div class="row" style="padding-bottom: 30px;">
                             <div class="col-6">
                                 <a href="cloudiness.html">
-                                <img class="panel" src="../Resources/assets/images/Fig3.png" alt="cloudiness">
+                                <img class="panel" src="/Resources/assets/images/Fig3.png" alt="cloudiness">
                                 </a>
                             </div>
                             <div class="col-6">
                                 <a href="wind.html">
-                                    <img class="panel" src="../Resources/assets/images/Fig4.png" alt="wind">
+                                    <img class="panel" src="/Resources/assets/images/Fig4.png" alt="wind">
                                 </a>
                             </div>
                         </div>
