--- a/index.html
+++ b/index.html
@@ -73,19 +73,19 @@
                             </div>
                             <div class="col-6">
                                 <a href="humidity.html">
-                                <img class="panel" src="./Resources/assets/images/Fig2.png" width="500" height="420" alt="humidity">
+                                <img class="panel" src="/Resources/assets/images/Fig2.png" width="500" height="420" alt="humidity">
                                 </a>
                             </div>
                         </div>
                         <div class="row" style="padding-bottom: 30px;">
                             <div class="col-6">
                                 <a href="cloudiness.html">
-                                <img class="panel" src="./Resources/assets/images/Fig3.png" alt="cloudiness">
+                                <img class="panel" src="/Resources/assets/images/Fig3.png" alt="cloudiness">
                                 </a>
                             </div>
                             <div class="col-6">
                                 <a href="wind.html">
-                                    <img class="panel" src="./Resources/assets/images/Fig4.png" alt="wind">
+                                    <img class="panel" src="/Resources/assets/images/Fig4.png" alt="wind">
                                 </a>
                             </div>
                         </div>
