--- a/wind.html
+++ b/wind.html
@@ -50,7 +50,7 @@
                 <div class="box" style="padding-bottom: 30px;">
                     <h3 class="title">Latitude vs. Wind Speed </h3>
                     <hr>
-                    <img src="/Resources/assets/images/Fig4.png"   class="vizualization rounded float-left" alt="wind">
+                    <img src="./Resources/assets/images/Fig4.png"   class="vizualization rounded float-left" alt="wind">
                     <p> There is no significant coorelation between latitude and wind speed, although there are some higher wind speeds over 60 Deg. Latitude. </p>
                 </div>
             </div>
