--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <div class="box" style="padding-bottom: 30px;">
                     <h3 class="title">Latitude vs. X</h3>
                     <hr>
-                    <img src="/Resources/assets/images/Fig1.png"   class="vizualization rounded float-left" alt="temp">
+                    <img src="./Resources/assets/images/Fig1.png"   class="vizualization rounded float-left" alt="temp">
                     <p>The purpose of this project was to analyze how weather changes as you get closer to the equator. 
                     To accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities.</p>
                     <p>After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs. latitude. 
